--- a/Projects/JavaScript/7_GenerateurDePasse/Projet - PasswordGenerator/style.css
+++ b/Projects/JavaScript/7_GenerateurDePasse/Projet - PasswordGenerator/style.css
@@ -9,13 +9,13 @@ body {
   margin: 0;
 }
 .app {
-  background-image: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%);
+  /* background-image: linear-gradient(to right, #ff758c 0%, #ff7eb3 100%); */
   border-radius: 16px;
   margin: 0 10px;
   padding: 24px 10px 10px;
   width: 90%;
   max-width: 600px;
-  box-shadow: 3px 4px 10px 0px #a76666c2;
+  /* box-shadow: 3px 4px 10px 0px #a76666c2; */
 }
 .range-container {
   margin: 20px 0;
@@ -35,15 +35,26 @@ input[type="checkbox"]:checked + label {
   align-items: center;
 }
 button {
-  margin: 14px 0 20px;
+  border-radius: 10px;
+    border: 1px solid rgb(159, 175, 189);
+    width: auto;   
+    padding: 10px;
+    /* margin: 0 0 10px; */
+    font-size: 16px ;
+    cursor: pointer;
+    box-shadow: 2px 5px 5px;
+    margin: 0 10px 0;
+    margin-top: 30px;
+  /* margin: 14px 0 20px;
   background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  
   padding: 10px 20px;
   border-radius: 150px;
   border: 2px solid #accbee;
   border-bottom: 3px solid yellow;
   border-right: 3px solid yellow;
   transition: 0.2s;
-  cursor: pointer;
+  cursor: pointer; */
 }
 
 
@@ -55,6 +66,9 @@ button {
 }
 
 #pwdgenerated{
-  height: 30px;
+  height: 40px;
   width: 300px;font-size: 18px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+
 }
