--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ li:hover {
 }
 
 
-/* PHOTO */
+/* -------------------PHOTO -------------------*/
 
 .photo{
     width:180px;
@@ -95,8 +95,9 @@ li:hover {
     width: 180px;
     opacity: 0;
     transition: 1s ease;
-    background-color: #ffffff;
+    background-color: #ffffffce;
     border-radius: 50%;
+    font-weight: bold;
   }
 
   .photoId:hover .overlay {
@@ -114,63 +115,118 @@ li:hover {
     transform: translate(-50%, -50%);
     text-align: center;
   }
+  span{
+    color: #690283;
+  }
   /* -------------------------------------- */
 
   /* BLOC DE PROJECT JAVSCRIPT */
+  .projectRow{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; 
+    margin: 30px;
+    
+}
   .projectJS{
+    
     display: flex;
+    flex-wrap: wrap; 
     flex-direction: row;
     justify-content: space-around;
+     
     vertical-align: middle;
-   margin-bottom: 30px; 
-    
+    margin-bottom: 30px; 
+    width: 46vw;
+
 }
-  .projectJSBloc{
-    display: flex;
-    flex-wrap: wrap; /*Les blocs les uns à côté des autres*/
-    flex-direction: row;
-    justify-content: start;
-    margin-top: 30px;
-    
-    margin-left: 0px; 
-    margin-right: 10px;
-    width: 50%;
-}
+
 .projectJSDetail{
-    overflow: auto;
+  
+    /* overflow: auto; */
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 18px;
     padding: 10px;
     margin: 10px;
-    width: 90%;
+    width:380px;
     margin: 10px;
-    text-align: right;
+    text-align: center;
     vertical-align: middle;
+
 }
-.imgBulle{
+.imgBulle,.imgPays{
     border-radius: 10px;
-    width: 500px;
+    width: 340px;
     height: 300px;
-    margin: 30px;
+    margin-bottom: 10px;
     border: 1px solid #aaaaaa34 ;
+    /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
+  -webkit-transition: all 1s ease; /* Safari et Chrome */
+  -moz-transition: all 1s ease; /* Firefox */
+  -ms-transition: all 1s ease; /* Internet Explorer 9 */
+  -o-transition: all 1s ease; /* Opera */
+  transition: all 1s ease;
 }
-.imgPays{
-    border-radius: 10px;
-    width: 500px;
-    height: 300px;
-    margin: 30px;
-}
+
 .imgTemp{
     border-radius: 10px;
+    width: 230px;
+    height: 300px;
+    /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
+  -webkit-transition: all 1s ease; /* Safari et Chrome */
+  -moz-transition: all 1s ease; /* Firefox */
+  -ms-transition: all 1s ease; /* Internet Explorer 9 */
+  -o-transition: all 1s ease; /* Opera */
+  transition: all 1s ease;
+}
+.imgGMDP{
+  border-radius: 10px;
+  width: 400px;
+  height: 250px;
+  /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
+-webkit-transition: all 1s ease; /* Safari et Chrome */
+-moz-transition: all 1s ease; /* Firefox */
+-ms-transition: all 1s ease; /* Internet Explorer 9 */
+-o-transition: all 1s ease; /* Opera */
+transition: all 1s ease;
+}
+.imgBulle:hover,.imgPays:hover,.imgTemp:hover,.imgGMDP:hover{
+    /* L'image est grossie de 25% */
+  -webkit-transform:scale(1); /* Safari et Chrome */
+  -moz-transform:scale(1); /* Firefox */
+  -ms-transform:scale(1); /* Internet Explorer 9 */
+  -o-transform:scale(1); /* Opera */
+  transform:scale(1);
+}
+.imgBulle:hover,.imgPays:hover{
+  border-radius: 20px;
+  width: 360px;
+  height: 330px;
+
+} 
+.imgTemp:hover{
+  border-radius: 20px;
+  width: 250px;
+    height: 330px;
+}
+.imgGMDP:hover{
+  border-radius: 10px;
+  width: 420px;
+  height: 280px;
 }
 
 h2,a {
-    text-align: right;
-    margin-right: 50px;
+    text-align: center;
     margin-bottom: 30px;
+}
+a{
+    text-decoration: none;
+    font-weight: bold;
+    color: #969096;
+    width: auto;
 }
 
 
