--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500&display=swap");
 
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +19,10 @@ body {
 .content {
   color: #690283;
   transition: 1s;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 h1 {
   text-transform: uppercase;
@@ -59,14 +71,28 @@ li {
   font-size: 18px;
   cursor: pointer;
   padding: 20px;
+
 }
 li:hover {
-    font-size: 22px;
+    font-size: 20px;
     border-radius: 15px;
     background: #29292934;
     color: #fcfcfb;
-}
 
+}
+h2 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+a{
+  text-decoration: none;
+  font-weight: bold;
+  color: #969096;
+  margin: 0px;
+}
+span{
+  color: #690283;
+}
 
 /* -------------------PHOTO -------------------*/
 
@@ -115,9 +141,7 @@ li:hover {
     transform: translate(-50%, -50%);
     text-align: center;
   }
-  span{
-    color: #690283;
-  }
+
   /* -------------------------------------- */
 
   /* BLOC DE PROJECT JAVSCRIPT */
@@ -137,7 +161,7 @@ li:hover {
      
     vertical-align: middle;
     margin-bottom: 30px; 
-    width: 46vw;
+    width:38vw;
 
 }
 
@@ -175,6 +199,7 @@ li:hover {
     border-radius: 10px;
     width: 230px;
     height: 300px;
+    margin-bottom: 10px;
     /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
   -webkit-transition: all 1s ease; /* Safari et Chrome */
   -moz-transition: all 1s ease; /* Firefox */
@@ -186,6 +211,7 @@ li:hover {
   border-radius: 10px;
   width: 400px;
   height: 250px;
+  margin-bottom: 10px;
   /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
 -webkit-transition: all 1s ease; /* Safari et Chrome */
 -moz-transition: all 1s ease; /* Firefox */
@@ -218,16 +244,71 @@ transition: all 1s ease;
   height: 280px;
 }
 
-h2,a {
-    text-align: center;
-    margin-bottom: 30px;
+
+
+/* // ------- PROJET */
+
+.folder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 100px;
+  margin-left: 100px;
+  background: #ffffff;
+  border-radius: 10px;
+  box-shadow: 1px 20px 25px -5px rgba(68, 2, 68, 0.1),
+    1px 10px 10px -5px rgba(0, 0, 0, 0.04);
+  overflow: hidden;
+  text-align: center;
+  margin-bottom: 20px;
+  -webkit-transition: all 1s ease; /* Safari et Chrome */
+  -moz-transition: all 1s ease; /* Firefox */
+  -ms-transition: all 1s ease; /* Internet Explorer 9 */
+  -o-transition: all 1s ease; /* Opera */
+  transition: all 1s ease;
 }
-a{
-    text-decoration: none;
-    font-weight: bold;
-    color: #969096;
-    width: auto;
+
+.folder:hover{
+  -webkit-transform:scale(1.02); /* Safari et Chrome */
+  -moz-transform:scale(1.02); /* Firefox */
+  -ms-transform:scale(1.02); /* Internet Explorer 9 */
+  -o-transform:scale(1.02); /* Opera */
+  transform:scale(1.02);
+}
+
+/* // ------- FOLDER SUMMARY */
+
+.folder-summary {
+  padding: 30px;
+  display: flex;
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 1;
+  height: 90px;
+  /* vertical-align: middle; */
+  
+  /* position: relative; */
+}
+
+.titleProject{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; 
+    justify-content: start;
+    background-color: #c59ccf;
+    width: 100%;
+    cursor: pointer;
+}
+.svpPlus_show_1, .svpPlus_hide_1, .svpPlus_show_2, .svpPlus_hide_2{
+  margin-left: 0px;
+  margin-right: 20px;
+  margin-top: -5px;
+  fill: #530053;
+}
+.projectsList{
+
 }
 
 
 
+/* // ------------ FOLDER ITEM */
