--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,21 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
+  vertical-align: middle;
+  
+  
 }
+
 h1 {
   text-transform: uppercase;
   text-align: center;
   font-size: 2rem;
   margin-top: 20px;
   margin-bottom: 50px;
+}
+h2 {
+  text-align: center;
+  margin-bottom: 30px;
 }
 p {
   padding: 0px 45px 20px ;
@@ -85,10 +93,7 @@ li:hover {
     color: #ffffffbe;
 
 }
-h2 {
-  text-align: center;
-  margin-bottom: 30px;
-}
+
 a{
   text-decoration: none;
   font-weight: bold;
@@ -96,7 +101,25 @@ a{
   margin: 0px;
 }
 span{
-  color: #690283;
+  /* color: #690283; */
+}
+
+/* ----------------Texte animé----------------------- */
+.txt-rotate{
+
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 50vh; 
+  max-width: 60vw;
+  margin: auto;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.5em; 
+  color: #888;
+  text-align: center;
+  
 }
 
 /* -------------------PHOTO NAV BAR-------------------*/
@@ -263,12 +286,14 @@ transition: all 1s ease;
   margin-right: 100px;
   margin-left: 100px;
   background: #ffffff;
+  
   border-radius: 10px;
+  border: 0.1px solid #f1f1f1cb;
   box-shadow: 1px 20px 25px -5px rgba(68, 2, 68, 0.1),
     1px 10px 10px -5px rgba(0, 0, 0, 0.04);
   overflow: hidden;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   -webkit-transition: all 1s ease; /* Safari et Chrome */
   -moz-transition: all 1s ease; /* Firefox */
   -ms-transition: all 1s ease; /* Internet Explorer 9 */
@@ -305,7 +330,8 @@ transition: all 1s ease;
     flex-direction: row;
     flex-wrap: wrap; 
     justify-content: start;
-    background-color: #754d809a;
+    background-color: #70556e1c;
+    
     /* background: #754d809a; */
     width: 100%;
     cursor: pointer;
@@ -500,4 +526,408 @@ border: 2px solid #9251ac;
   line-height: 35px;
   margin: -5px 20px 20px 30px;
   color: #000000;
+}
+
+
+/* ---------------------------- SKILLS ------------------------------- */
+#SkillBox {
+  font-size: 20px;
+  font-family: 'Indie Flower', cursive;
+  width: 50%;
+  height: auto;
+  margin: 40px auto;
+  background-color: #fff;
+  /* //border: 1px solid #cdcdcd; */
+  padding: 10px;
+  border-radius:5px;
+  -o-border-radius:10px;
+  -webkit-border-radius:10px;
+  -ms-border-radius:10px;
+  -moz-border-radius:10px;  
+}
+#SkillBox img {
+  width: 20%;
+  height: 10%;
+  margin: auto 35%;
+  padding: 10px;
+}
+.SkillBar {
+  width: 90%;
+  height: 50px;
+  position: relative;
+  border-radius: 5px;
+  background: rgba(17, 17, 17, .3);
+  margin: 20px auto;
+}
+#Skill-HTML {
+  width: 100%;
+  animation: Animate-HTML 4s;
+  -webkit-animation: Animate-HTML 4s;
+  -moz-animation: Animate-HTML 4s;
+  -o-animation: Animate-HTML 4s;
+  height: 50px;
+  border-radius:5px;
+  position: absolute;
+  background-color: #ea8564;
+}
+@keyframes Animate-HTML {
+  from {
+  width: 10px;
+}
+to {
+  width: 100%}
+}@-webkit-keyframes Animate-HTML {
+  from {
+  width: 10px;
+}
+to {
+  width: 100%}
+}@-moz-keyframes Animate-HTML {
+  from {
+  width: 10px;
+}
+to {
+  width: 100%}
+}@-o-keyframes Animate-HTML {
+  from {
+  width: 10px;
+}
+to {
+  width: 100%}
+}#Skill-CSS {
+  animation: Animate-CSS 5s;
+  -webkit-animation: Animate-CSS 5s;
+  -moz-animation: Animate-CSS 5s;
+  -o-animation: Animate-CSS 5s;
+  width: 70%;
+  height: 50px;
+  position: absolute;
+  background-color: #55a69f;
+  border-radius:5px;
+}
+@keyframes Animate-CSS {
+  from {
+  width: 10px;
+}
+to {
+  width: 70%}
+}@-webkit-keyframes Animate-CSS {
+  from {
+  width: 10px;
+}
+to {
+  width: 70%}
+}@-moz-keyframes Animate-CSS {
+  from {
+  width: 10px;
+}
+to {
+  width: 70%}
+}@-o-keyframes Animate-CSS {
+  from {
+  width: 10px;
+}
+to {
+  width: 70%}
+}#Skill-jQuery {
+  animation: Animate-jQuery 5s;
+  -webkit-animation: Animate-jQuery 5s;
+  -moz-animation: Animate-jQuery 5s;
+  -o-animation: Animate-jQuery 5s;
+  width: 40%;
+  height: 50px;
+  position: absolute;
+  background-color: #99856d;
+  border-radius:5px;
+}
+@keyframes Animate-jQuery {
+  from {
+  width: 10px;
+}
+to {
+  width: 40%}
+}@-webkit-keyframes Animate-jQuery {
+  from {
+  width: 10px;
+}
+to {
+  width: 40%}
+}@-moz-keyframes Animate-jQuery {
+  from {
+  width: 10px;
+}
+to {
+  width: 40%}
+}@-o-keyframes Animate-jQuery {
+  from {
+  width: 10px;
+}
+to {
+  width: 40%}
+}#Skill-JS {
+  animation: Animate-JS 4s;
+  -webkit-animation: Animate-JS 4s;
+  -moz-animation: Animate-JS 4s;
+  -o-animation: Animate-JS 4s;
+  width: 65%;
+  height: 50px;
+  position: absolute;
+  background-color: #c44e45;
+  border-radius:5px;
+}
+@keyframes Animate-JS {
+  from {
+  width: 10px;
+}
+to {
+  width: 65%}
+}@-webkit-keyframes Animate-JS {
+  from {
+  width: 10px;
+}
+to {
+  width: 65%}
+}@-moz-keyframes Animate-JS {
+  from {
+  width: 10px;
+}
+to {
+  width: 65%}
+}@-o-keyframes Animate-JS {
+  from {
+  width: 10px;
+}
+to {
+  width: 65%}
+}#Skill-XML {
+  animation: Animate-XML 4s;
+  -webkit-animation: Animate-XML 4s;
+  -moz-animation: Animate-XML 4s;
+  -o-animation: Animate-XML 4s;
+  width: 40%;
+  height: 50px;
+  position: absolute;
+  background-color: #5aa669;
+  border-radius:5px;
+}
+@keyframes Animate-XML {
+  from {
+  width: 10px;
+}
+to {
+  width: 40%}
+}@-webkit-keyframes Animate-XML {
+  from {
+  width: 10px;
+}
+to {
+  width: 40%}
+}@-moz-keyframes Animate-XML {
+  from {
+  width: 10px;
+}
+to {
+  width: 40%}
+}@-o-keyframes Animate-XML {
+  from {
+  width: 10px;
+}
+to {
+  width: 40%}
+}#Skill-C {
+  animation: Animate-C 4s;
+  -webkit-animation: Animate-C 4s;
+  -moz-animation: Animate-C 4s;
+  -o-animation: Animate-C 4s;
+  width: 30%;
+  height: 50px;
+  position: absolute;
+  background-color: #970cc1;
+  border-radius:5px;
+}
+@keyframes Animate-C {
+  from {
+  width: 10px;
+}
+to {
+  width: 30%}
+}@-webkit-keyframes Animate-C {
+  from {
+  width: 10px;
+}
+to {
+  width: 30%}
+}@-moz-keyframes Animate-C {
+  from {
+  width: 10px;
+}
+to {
+  width: 30%}
+}@-o-keyframes Animate-C {
+  from {
+  width: 10px;
+}
+to {
+  width: 30%}
+}#Skill-JAVA {
+  animation: Animate-JAVA 4s;
+  -webkit-animation: Animate-JAVA 4s;
+  -moz-animation: Animate-JAVA 4s;
+  -o-animation: Animate-JAVA 4s;
+  width: 25%;
+  height: 50px;
+  position: absolute;
+  background-color: #8e930c;
+  border-radius:5px;
+}
+@keyframes Animate-JAVA {
+  from {
+  width: 10px;
+}
+to {
+  width: 25%}
+}@-webkit-keyframes Animate-JAVA {
+  from {
+  width: 10px;
+}
+to {
+  width: 25%}
+}@-moz-keyframes Animate-JAVA {
+  from {
+  width: 10px;
+}
+to {
+  width: 25%}
+}@-o-keyframes Animate-JAVA {
+  from {
+  width: 10px;
+}
+to {
+  width: 25%}
+}#Skill-PHP {
+  animation: Animate-PHP 4s;
+  -webkit-animation: Animate-PHP 4s;
+  -moz-animation: Animate-PHP 4s;
+  -o-animation: Animate-PHP 4s;
+  width: 50%;
+  height: 50px;
+  position: absolute;
+  background-color: #5A69A6;
+  border-radius:5px;
+}
+@keyframes Animate-PHP {
+  from {
+  width: 10px;
+}
+to {
+  width: 50%}
+}@-webkit-keyframes Animate-PHP {
+  from {
+  width: 10px;
+}
+to {
+  width: 50%}
+}@-moz-keyframes Animate-PHP {
+  from {
+  width: 10px;
+}
+to {
+  width: 50%}
+}@-o-keyframes Animate-PHP {
+  from {
+  width: 10px;
+}
+to {
+  width: 50%}
+}#Skill-SQL {
+  animation: Animate-SQL 4s;
+  -webkit-animation: Animate-SQL 4s;
+  -moz-animation: Animate-SQL 4s;
+  -o-animation: Animate-SQL 4s;
+  width: 80%;
+  height: 50px;
+  position: absolute;
+  background-color: #23b1db;
+  border-radius:5px;
+}
+@keyframes Animate-SQL {
+  from {
+  width: 10px;
+}
+to {
+  width: 80%}
+}@-webkit-keyframes Animate-SQL {
+  from {
+  width: 10px;
+}
+to {
+  width: 80%}
+}@-moz-keyframes Animate-SQL {
+  from {
+  width: 10px;
+}
+to {
+  width: 80%}
+}@-o-keyframes Animate-SQL {
+  from {
+  width: 10px;
+}
+to {
+  width: 80%}
+}#Skill-VBNET {
+  animation: Animate-VBNET 4s;
+  -webkit-animation: Animate-VBNET 4s;
+  -moz-animation: Animate-VBNET 4s;
+  -o-animation: Animate-VBNET 4s;
+  width: 35%;
+  height: 50px;
+  position: absolute;
+  background-color: #f8a51e;
+  border-radius:5px;
+}
+@keyframes Animate-VBNET {
+  from {
+  width: 10px;
+}
+to {
+  width: 35%}
+}@-webkit-keyframes Animate-VBNET {
+  from {
+  width: 10px;
+}
+to {
+  width: 35%}
+}@-moz-keyframes Animate-VBNET {
+  from {
+  width: 10px;
+}
+to {
+  width: 35%}
+}@-o-keyframes Animate-VBNET {
+  from {
+  width: 10px;
+}
+to {
+  width: 35%}
+}.Skill-Area {
+  z-index: 1;
+  float: left;
+  /* //position: absolute; */
+  margin-top: 15px;
+  margin-left: 15px;
+  text-shadow: none;
+  color: #fff;
+  /* //font-family: Lato-Regular, sans-serif; */
+  font-size: 18px;
+}
+.PercentText {
+  z-index: 3;
+  position: relative;
+  padding-right: 15px;
+  margin-top: 15px;
+  float: right;
+  text-shadow: none;
+  color: #fff;
+  /* //font-family: Lato-Regular, sans-serif; */
+  font-size: 18px;
 }
