--- a/css/style.css
+++ b/css/style.css
@@ -46,15 +46,16 @@ p {
   position: absolute;
   width: 230px;
   height: 110%;
-  background: #70556e;
+  /* background: #70556e; */
+  background: #ffffff;
   top: -20px;
   left: -230px;
   transition: 0.5s ease-out;
   z-index: 4;
   border-radius: 5px;
-  /* box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3),
-    0 -12px 36px -8px rgba(0, 0, 0, 0.025); */
+    0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
 .toggle-btn {
   position: absolute;
@@ -82,15 +83,17 @@ li {
   list-style: none;
   font-size: 18px;
   cursor: pointer;
-  padding: 20px;
+  padding: 15px;
   text-align: left;
-
+letter-spacing: 1px;
 }
 li:hover {
-    font-size: 20px;
-    border-radius: 15px;
-    /* background: #1b1b1b34; */
-    color: #ffffffbe;
+    /* font-size: 19px; */
+    border-radius: 5px;
+    background: #70556e56;
+    color: #742470;
+    
+    
 
 }
 
@@ -160,7 +163,7 @@ span{
   }
   
   .text {
-    color: #70556e;
+    color: #573d55;
     font-size: 22px;
     position: absolute;
     top: 50%;
@@ -286,7 +289,7 @@ transition: all 1s ease;
   margin-right: 100px;
   margin-left: 100px;
   background: #ffffff;
-  
+
   border-radius: 10px;
   border: 0.1px solid #f1f1f1cb;
   box-shadow: 1px 20px 25px -5px rgba(68, 2, 68, 0.1),
@@ -533,9 +536,9 @@ border: 2px solid #9251ac;
 #SkillBox {
   font-size: 20px;
   font-family: 'Indie Flower', cursive;
-  width: 50%;
+  width: 90%;
   height: auto;
-  margin: 40px auto;
+  margin: 35px auto;
   background-color: #fff;
   /* //border: 1px solid #cdcdcd; */
   padding: 10px;
@@ -560,7 +563,7 @@ border: 2px solid #9251ac;
   margin: 20px auto;
 }
 #Skill-HTML {
-  width: 100%;
+  width: 85%;
   animation: Animate-HTML 4s;
   -webkit-animation: Animate-HTML 4s;
   -moz-animation: Animate-HTML 4s;
@@ -568,33 +571,14 @@ border: 2px solid #9251ac;
   height: 50px;
   border-radius:5px;
   position: absolute;
-  background-color: #ea8564;
+  background-color: #e24117;
 }
-@keyframes Animate-HTML {
-  from {
-  width: 10px;
-}
-to {
-  width: 100%}
-}@-webkit-keyframes Animate-HTML {
-  from {
-  width: 10px;
-}
-to {
-  width: 100%}
-}@-moz-keyframes Animate-HTML {
-  from {
-  width: 10px;
-}
-to {
-  width: 100%}
-}@-o-keyframes Animate-HTML {
-  from {
-  width: 10px;
-}
-to {
-  width: 100%}
-}#Skill-CSS {
+@keyframes Animate-HTML {  from {  width: 10px;}to {  width: 85%}}
+@-webkit-keyframes Animate-HTML {  from {  width: 10px;}to {  width: 85%}}
+@-moz-keyframes Animate-HTML { from { width: 10px; }to { width: 85%}}
+@-o-keyframes Animate-HTML {  from {  width: 10px;}to {  width: 85%}}
+
+#Skill-CSS {
   animation: Animate-CSS 5s;
   -webkit-animation: Animate-CSS 5s;
   -moz-animation: Animate-CSS 5s;
@@ -602,69 +586,17 @@ to {
   width: 70%;
   height: 50px;
   position: absolute;
-  background-color: #55a69f;
+  background-color: #006eba;
   border-radius:5px;
 }
-@keyframes Animate-CSS {
-  from {
-  width: 10px;
-}
-to {
-  width: 70%}
-}@-webkit-keyframes Animate-CSS {
-  from {
-  width: 10px;
-}
-to {
-  width: 70%}
-}@-moz-keyframes Animate-CSS {
-  from {
-  width: 10px;
-}
-to {
-  width: 70%}
-}@-o-keyframes Animate-CSS {
-  from {
-  width: 10px;
-}
-to {
-  width: 70%}
-}#Skill-jQuery {
-  animation: Animate-jQuery 5s;
-  -webkit-animation: Animate-jQuery 5s;
-  -moz-animation: Animate-jQuery 5s;
-  -o-animation: Animate-jQuery 5s;
-  width: 40%;
-  height: 50px;
-  position: absolute;
-  background-color: #99856d;
-  border-radius:5px;
-}
-@keyframes Animate-jQuery {
-  from {
-  width: 10px;
-}
-to {
-  width: 40%}
-}@-webkit-keyframes Animate-jQuery {
-  from {
-  width: 10px;
-}
-to {
-  width: 40%}
-}@-moz-keyframes Animate-jQuery {
-  from {
-  width: 10px;
-}
-to {
-  width: 40%}
-}@-o-keyframes Animate-jQuery {
-  from {
-  width: 10px;
-}
-to {
-  width: 40%}
-}#Skill-JS {
+@keyframes Animate-CSS {  from {  width: 10px;}to {  width: 70%}}
+@-webkit-keyframes Animate-CSS {  from {  width: 10px;}to {  width: 70%}}
+@-moz-keyframes Animate-CSS {  from {  width: 10px;}to {  width: 70%}}
+@-o-keyframes Animate-CSS {  from {  width: 10px;}to {  width: 70%}}
+
+
+
+#Skill-JS {
   animation: Animate-JS 4s;
   -webkit-animation: Animate-JS 4s;
   -moz-animation: Animate-JS 4s;
@@ -672,104 +604,16 @@ to {
   width: 65%;
   height: 50px;
   position: absolute;
-  background-color: #c44e45;
+  background-color: #e7c628;
   border-radius:5px;
 }
-@keyframes Animate-JS {
-  from {
-  width: 10px;
-}
-to {
-  width: 65%}
-}@-webkit-keyframes Animate-JS {
-  from {
-  width: 10px;
-}
-to {
-  width: 65%}
-}@-moz-keyframes Animate-JS {
-  from {
-  width: 10px;
-}
-to {
-  width: 65%}
-}@-o-keyframes Animate-JS {
-  from {
-  width: 10px;
-}
-to {
-  width: 65%}
-}#Skill-XML {
-  animation: Animate-XML 4s;
-  -webkit-animation: Animate-XML 4s;
-  -moz-animation: Animate-XML 4s;
-  -o-animation: Animate-XML 4s;
-  width: 40%;
-  height: 50px;
-  position: absolute;
-  background-color: #5aa669;
-  border-radius:5px;
-}
-@keyframes Animate-XML {
-  from {
-  width: 10px;
-}
-to {
-  width: 40%}
-}@-webkit-keyframes Animate-XML {
-  from {
-  width: 10px;
-}
-to {
-  width: 40%}
-}@-moz-keyframes Animate-XML {
-  from {
-  width: 10px;
-}
-to {
-  width: 40%}
-}@-o-keyframes Animate-XML {
-  from {
-  width: 10px;
-}
-to {
-  width: 40%}
-}#Skill-C {
-  animation: Animate-C 4s;
-  -webkit-animation: Animate-C 4s;
-  -moz-animation: Animate-C 4s;
-  -o-animation: Animate-C 4s;
-  width: 30%;
-  height: 50px;
-  position: absolute;
-  background-color: #970cc1;
-  border-radius:5px;
-}
-@keyframes Animate-C {
-  from {
-  width: 10px;
-}
-to {
-  width: 30%}
-}@-webkit-keyframes Animate-C {
-  from {
-  width: 10px;
-}
-to {
-  width: 30%}
-}@-moz-keyframes Animate-C {
-  from {
-  width: 10px;
-}
-to {
-  width: 30%}
-}@-o-keyframes Animate-C {
-  from {
-  width: 10px;
-}
-to {
-  width: 30%}
-}#Skill-JAVA {
+@keyframes Animate-JS {  from {  width: 10px;}to {  width: 65%}}
+@-webkit-keyframes Animate-JS {  from {  width: 10px;}to {  width: 65%}}
+@-moz-keyframes Animate-JS {  from {  width: 10px;}to {  width: 65%}}
+@-o-keyframes Animate-JS {  from {  width: 10px;}to { width: 65%}}
+
+
+#Skill-JAVA {
   animation: Animate-JAVA 4s;
   -webkit-animation: Animate-JAVA 4s;
   -moz-animation: Animate-JAVA 4s;
@@ -777,139 +621,195 @@ to {
   width: 25%;
   height: 50px;
   position: absolute;
-  background-color: #8e930c;
+  background-color: #e61f24;
   border-radius:5px;
 }
-@keyframes Animate-JAVA {
-  from {
-  width: 10px;
-}
-to {
-  width: 25%}
-}@-webkit-keyframes Animate-JAVA {
-  from {
-  width: 10px;
-}
-to {
-  width: 25%}
-}@-moz-keyframes Animate-JAVA {
-  from {
-  width: 10px;
-}
-to {
-  width: 25%}
-}@-o-keyframes Animate-JAVA {
-  from {
-  width: 10px;
-}
-to {
-  width: 25%}
-}#Skill-PHP {
+@keyframes Animate-JAVA {  from {  width: 10px;}to {  width: 25%}}
+@-webkit-keyframes Animate-JAVA {  from {  width: 10px;}to {  width: 25%}}
+@-moz-keyframes Animate-JAVA {  from {  width: 10px;}to {  width: 25%}}
+@-o-keyframes Animate-JAVA {  from {  width: 10px;}to {  width: 25%}}
+
+#Skill-PHP {
   animation: Animate-PHP 4s;
   -webkit-animation: Animate-PHP 4s;
   -moz-animation: Animate-PHP 4s;
   -o-animation: Animate-PHP 4s;
-  width: 50%;
+  width: 40%;
   height: 50px;
   position: absolute;
-  background-color: #5A69A6;
+  background-color: #7377ad;
   border-radius:5px;
 }
-@keyframes Animate-PHP {
-  from {
-  width: 10px;
-}
-to {
-  width: 50%}
-}@-webkit-keyframes Animate-PHP {
-  from {
-  width: 10px;
-}
-to {
-  width: 50%}
-}@-moz-keyframes Animate-PHP {
-  from {
-  width: 10px;
-}
-to {
-  width: 50%}
-}@-o-keyframes Animate-PHP {
-  from {
-  width: 10px;
-}
-to {
-  width: 50%}
-}#Skill-SQL {
+@keyframes Animate-PHP {  from {  width: 10px;}to {  width: 40%}}
+@-webkit-keyframes Animate-PHP {  from {  width: 10px;}to {  width: 40%}}
+@-moz-keyframes Animate-PHP {  from {  width: 10px;}to {  width: 40%}}
+@-o-keyframes Animate-PHP {  from {  width: 10px;}to {  width: 40%}}
+
+#Skill-SQL {
   animation: Animate-SQL 4s;
   -webkit-animation: Animate-SQL 4s;
   -moz-animation: Animate-SQL 4s;
   -o-animation: Animate-SQL 4s;
-  width: 80%;
+  width: 50%;
   height: 50px;
   position: absolute;
-  background-color: #23b1db;
+  background-color: #d47131;
   border-radius:5px;
 }
-@keyframes Animate-SQL {
-  from {
-  width: 10px;
+@keyframes Animate-SQL {  from {  width: 10px;}to {  width: 50%}}
+@-webkit-keyframes Animate-SQL {  from {  width: 10px;}to {  width: 50%}}
+@-moz-keyframes Animate-SQL {  from {  width: 10px;}to {  width: 50%}}
+@-o-keyframes Animate-SQL {  from {  width: 10px;}to {  width: 50%}}
+
+
+#Skill-ARDUINO {
+  animation: Animate-ARDUINO 4s;
+  -webkit-animation: Animate-ARDUINO 4s;
+  -moz-animation: Animate-ARDUINO 4s;
+  -o-animation: Animate-ARDUINO 4s;
+  width: 70%;
+  height: 50px;
+  position: absolute;
+  background-color: #009298;
+  border-radius:5px;
 }
-to {
-  width: 80%}
-}@-webkit-keyframes Animate-SQL {
-  from {
-  width: 10px;
+@keyframes Animate-ARDUINO {  from {  width: 10px;}to {  width: 70%}}
+@-webkit-keyframes Animate-ARDUINO {  from {  width: 10px;}to {  width: 70%}}
+@-moz-keyframes Animate-ARDUINO {  from {  width: 10px;}to {  width: 70%}}
+@-o-keyframes Animate-ARDUINO {  from {  width: 10px;}to {  width: 70%}}
+
+#Skill-WL {
+  animation: Animate-WL 4s;
+  -webkit-animation: Animate-WL 4s;
+  -moz-animation: Animate-WL 4s;
+  -o-animation: Animate-WL 4s;
+  width: 60%;
+  height: 50px;
+  position: absolute;
+  background-color: #4b4b4b;
+  border-radius:5px;
 }
-to {
-  width: 80%}
-}@-moz-keyframes Animate-SQL {
-  from {
-  width: 10px;
+@keyframes Animate-WL {  from {  width: 10px;}to {  width: 60%}}
+@-webkit-keyframes Animate-WL {  from {  width: 10px;}to {  width: 60%}}
+@-moz-keyframes Animate-WL {  from {  width: 10px;}to {  width: 60%}}
+@-o-keyframes Animate-WL {  from {  width: 10px;}to {  width: 60%}}
+
+#Skill-LATEX{
+  animation: Animate-LATEX 4s;
+  -webkit-animation: Animate-LATEX 4s;
+  -moz-animation: Animate-LATEX 4s;
+  -o-animation: Animate-LATEX 4s;
+  width: 60%;
+  height: 50px;
+  position: absolute;
+  background-color: #000000;
+  border-radius:5px;
 }
-to {
-  width: 80%}
-}@-o-keyframes Animate-SQL {
-  from {
-  width: 10px;
+@keyframes Animate-LATEX {  from {  width: 10px;}to {  width: 60%}}
+@-webkit-keyframes Animate-LATEX {  from {  width: 10px;}to {  width: 60%}}
+@-moz-keyframes Animate-LATEX {  from {  width: 10px;}to {  width: 60%}}
+@-o-keyframes Animate-LATEX {  from {  width: 10px;}to {  width: 60%}}
+
+
+
+#Skill-LARAVEL {
+  animation: Animate-LARAVEL 5s;
+  -webkit-animation: Animate-LARAVEL 5s;
+  -moz-animation: Animate-LARAVEL 5s;
+  -o-animation: Animate-LARAVEL 5s;
+  width: 45%;
+  height: 50px;
+  position: absolute;
+  background-color: #eb4d43;
+  border-radius:5px;
 }
-to {
-  width: 80%}
-}#Skill-VBNET {
-  animation: Animate-VBNET 4s;
-  -webkit-animation: Animate-VBNET 4s;
-  -moz-animation: Animate-VBNET 4s;
-  -o-animation: Animate-VBNET 4s;
-  width: 35%;
+@keyframes Animate-LARAVEL {  from {  width: 10px;}to {  width: 45%}}
+@-webkit-keyframes Animate-LARAVEL {  from {  width: 10px;}to { width: 45%}}
+@-moz-keyframes Animate-LARAVEL {  from {  width: 10px;}to {  width: 45%}}
+@-o-keyframes Animate-LARAVEL {  from {  width: 10px;}to {  width: 45%}}
+
+#Skill-SYMFONY {
+  animation: Animate-SYMFONY 4s;
+  -webkit-animation: Animate-SYMFONY 4s;
+  -moz-animation: Animate-SYMFONY 4s;
+  -o-animation: Animate-XML 4s;
+  width: 55%;
+  height: 50px;
+  position: absolute;
+  background-color: #000000;
+  border-radius:5px;
+}
+@keyframes Animate-SYMFONY {  from {  width: 10px;}to {  width: 55%}}
+@-webkit-keyframes Animate-SYMFONY {  from {  width: 10px;}to { width: 55%;}}
+@-moz-keyframes Animate-SYMFONY {  from {  width: 10px;}to {  width: 55%}}
+@-o-keyframes Animate-SYMFONY {  from {  width: 10px;}to {  width: 55%}}
+
+/* #Skill-WINDEV {
+  animation: Animate-C 4s;
+  -webkit-animation: Animate-C 4s;
+  -moz-animation: Animate-C 4s;
+  -o-animation: Animate-C 4s;
+  width: 70%;
+  height: 50px;
+  position: absolute;
+  background-color: #970cc1;
+  border-radius:5px;
+}
+@keyframes Animate-WINDEV {  from {  width: 10px;}to {  width: 70%}}
+@-webkit-keyframes Animate-WINDEV {from {  width: 10px;}to {  width: 70%}}
+@-moz-keyframes Animate-WINDEV {  from {  width: 10px;}to {  width: 70%}}
+@-o-keyframes Animate-WINDEV {  from {width: 10px;}to {  width: 70%}} */
+
+#Skill-WINDEV {
+  animation: Animate-WINDEV 4s;
+  -webkit-animation: Animate-WINDEV 4s;
+  -moz-animation: Animate-WINDEV 4s;
+  -o-animation: Animate-WINDEV 4s;
+  width: 75%;
+  height: 50px;
+  position: absolute;
+  background-color: #f2bd00;
+  border-radius:5px;
+}
+@keyframes Animate-WINDEV {  from {  width: 10px;}to {  width: 75%}}
+@-webkit-keyframes Animate-WINDEV {from {  width: 10px;}to {  width: 75%}}
+@-moz-keyframes Animate-WINDEV {  from {  width: 10px;}to {  width: 75%}}
+@-o-keyframes Animate-WINDEV {  from {width: 10px;}to {  width: 75%}}
+
+#Skill-WEBDEV {
+  animation: Animate-WEBDEV 4s;
+  -webkit-animation: Animate-WEBDEV 4s;
+  -moz-animation: Animate-WEBDEV 4s;
+  -o-animation: Animate-WEBDEV 4s;
+  width: 70%;
+  height: 50px;
+  position: absolute;
+  background-color: #5171b2;
+  border-radius:5px;
+}
+@keyframes Animate-WEBDEV {  from {  width: 10px;}to {  width: 70%}}
+@-webkit-keyframes Animate-WEBDEV {from {  width: 10px;}to {  width: 70%}}
+@-moz-keyframes Animate-WEBDEV {  from {  width: 10px;}to {  width: 70%}}
+@-o-keyframes Animate-WEBDEV {  from {width: 10px;}to {  width: 70%}}
+
+
+#Skill-MS {
+  animation: Animate-MS 4s;
+  -webkit-animation: Animate-MS 4s;
+  -moz-animation: Animate-MS 4s;
+  -o-animation: Animate-MS 4s;
+  width: 80%;
   height: 50px;
   position: absolute;
   background-color: #f8a51e;
   border-radius:5px;
 }
-@keyframes Animate-VBNET {
-  from {
-  width: 10px;
-}
-to {
-  width: 35%}
-}@-webkit-keyframes Animate-VBNET {
-  from {
-  width: 10px;
-}
-to {
-  width: 35%}
-}@-moz-keyframes Animate-VBNET {
-  from {
-  width: 10px;
-}
-to {
-  width: 35%}
-}@-o-keyframes Animate-VBNET {
-  from {
-  width: 10px;
-}
-to {
-  width: 35%}
-}.Skill-Area {
+@keyframes Animate-MS {  from {  width: 10px;}to {  width: 80%}}
+@-webkit-keyframes Animate-MS {  from {  width: 10px;}to {  width: 80%}}
+@-moz-keyframes Animate-MS {  from {  width: 10px;}to {  width: 80%}}
+@-o-keyframes Animate-MS {  from {  width: 10px;}to {  width: 80%}}
+
+.Skill-Area {
   z-index: 1;
   float: left;
   /* //position: absolute; */
@@ -930,4 +830,49 @@ to {
   color: #fff;
   /* //font-family: Lato-Regular, sans-serif; */
   font-size: 18px;
+}
+
+
+
+.SkillFolder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #ffffff;
+
+  border-radius: 10px;
+  border: 0.1px solid #f1f1f1cb;
+  box-shadow: 1px 20px 25px -5px rgba(68, 2, 68, 0.1),
+    1px 10px 10px -5px rgba(0, 0, 0, 0.04);
+  overflow: hidden;
+  text-align: center;
+  margin-bottom: 30px;
+
+  -webkit-transition: all 1s ease; /* Safari et Chrome */
+  -moz-transition: all 1s ease; /* Firefox */
+  -ms-transition: all 1s ease; /* Internet Explorer 9 */
+  -o-transition: all 1s ease; /* Opera */
+  transition: all 1s ease;
+  
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.SkillFolder:hover{
+  -webkit-transform:scale(1.02); /* Safari et Chrome */
+  -moz-transform:scale(1.02); /* Firefox */
+  -ms-transform:scale(1.02); /* Internet Explorer 9 */
+  -o-transform:scale(1.02); /* Opera */
+  transform:scale(1.02);
+}
+.skillTitle{
+  color: #ffffff;
+  font-size: 1.1rem;
+  font-weight: 200;
+  white-space: nowrap;
+  height: 60px;
+  background-color: #573d55;
+  padding: 15px;
+  letter-spacing: 1px;
 }
