--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ p {
 }
 ul{
     padding: 20px;
+    margin-top: 15px;
     text-align: center;
 }
 li {
@@ -90,8 +91,8 @@ letter-spacing: 1px;
 li:hover {
     /* font-size: 19px; */
     border-radius: 5px;
-    background: #70556e56;
-    color: #742470;
+    background: #130202b7;
+    color: #ffffff;
     
     
 
@@ -110,18 +111,20 @@ span{
 /* ----------------Texte animé----------------------- */
 .txt-rotate{
 
-  overflow: auto;
+  /* overflow: auto; */
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 50vh; 
+  align-items:end;
+  justify-content: right;
+  /* min-height: 50vh; 
   max-width: 60vw;
-  margin: auto;
+  margin: auto; */
   font-family: 'Raleway', sans-serif;
   font-size: 1.5em; 
   color: #888;
-  text-align: center;
+  text-align: right;
+  
+  margin-top: 40px;
   
 }
 
@@ -623,10 +626,10 @@ border: 2px solid #9251ac;
 
 
 #Skill-JAVA {
-  animation: Animate-JAVA 4s;
-  -webkit-animation: Animate-JAVA 4s;
-  -moz-animation: Animate-JAVA 4s;
-  -o-animation: Animate-JAVA 4s;
+  animation: Animate-JAVA 2s;
+  -webkit-animation: Animate-JAVA 2s;
+  -moz-animation: Animate-JAVA 2s;
+  -o-animation: Animate-JAVA 2s;
   width: 25%;
   height: 50px;
   position: absolute;
