--- a/css/styleFormation.css
+++ b/css/styleFormation.css
@@ -44,12 +44,12 @@ p {
 }
 #side-bar {
   position: absolute;
-  width: 230px;
-  height: 110%;
+  width: 260px;
+  height: 105%;
   /* background: #70556e; */
   background: #ffffff;
   top: -20px;
-  left: -230px;
+  left: -260px;
   transition: 0.5s ease-out;
   z-index: 4;
   border-radius: 5px;
@@ -60,7 +60,7 @@ p {
 .toggle-btn {
   position: absolute;
   top: 30px;
-  left: 240px;
+  left: 275px;
   cursor: pointer;
   height: 50px;
   width: 50px;
@@ -86,14 +86,28 @@ li {
   cursor: pointer;
   padding: 15px;
   text-align: left;
-letter-spacing: 1px;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  /* background-color: #573d55; */
+  -webkit-transition: all 1s ease; /* Safari et Chrome */
+  -moz-transition: all 1s ease; /* Firefox */
+  -ms-transition: all 1s ease; /* Internet Explorer 9 */
+  -o-transition: all 1s ease; /* Opera */
+  transition: all 1s ease;
+  display: flex;
+  flex-direction: row;
 }
 li:hover {
     /* font-size: 19px; */
     border-radius: 5px;
-    background: #130202b7;
-    color: #ffffff;
+    background: #c9c9c954;
+    color: #474747;
     
+    -webkit-transform:scale(1.05); /* Safari et Chrome */
+    -moz-transform:scale(1.05); /* Firefox */
+    -ms-transform:scale(1.05); /* Internet Explorer 9 */
+    -o-transform:scale(1.05); /* Opera */
+    transform:scale(1.05);
     
 
 }
@@ -177,13 +191,13 @@ a{
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 5px;
+    left: 20px;
     right: 0;
     height: 180px;
     width: 180px;
     opacity: 0;
     transition: 2s ease;
-    background-color: #ffffffce;
+    background-color: #ffffffe7;
     border-radius: 50%;
     font-weight: bold;
   }
@@ -212,6 +226,7 @@ a{
     position: relative;
     width: 70vw;
     justify-content: space-around;
+    
 }
 .timeline__event {
     margin-bottom: 20px;
@@ -536,7 +551,7 @@ color: #555ac0;
   /* text-shadow: 0 0 0.01em #ab45c28a; */
   font-weight:bold;
   margin-top: 10px;
-  margin-left: 40px;
+  margin-left: 15px;
  
 } 
 .diplome{
