--- a/css/styleSkill.css
+++ b/css/styleSkill.css
@@ -633,9 +633,27 @@ a{
   
 
   /* -------------------CONTACT PAGE ----------------- */
-
+.contact1{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-content: center;
+  vertical-align: middle;
+  
+}
+.contact11{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 30px;
+}
+.contact12{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
 .image-logo{
-    width : 300px; height : 300px;
+    width : 250px; height : 250px;
     display: block;
     margin: auto;
     
