--- a/css/styleSkill.css
+++ b/css/styleSkill.css
@@ -639,22 +639,78 @@ a{
   justify-content: space-around;
   align-content: center;
   vertical-align: middle;
+  margin-top: -40px;
   
+  
+}
+.contact10{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 30px;
 }
 .contact11{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 30px;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  
+  font-weight: bold;
+  -webkit-transition: all 1s ease; /* Safari et Chrome */
+  -moz-transition: all 1s ease; /* Firefox */
+  -ms-transition: all 1s ease; /* Internet Explorer 9 */
+  -o-transition: all 1s ease; /* Opera */
+  transition: all 1s ease;
 }
+.contact11:hover{
+  
+  box-shadow: 1px 20px 25px -5px rgba(68, 2, 68, 0.1),
+  1px 10px 10px -5px rgba(0, 0, 0, 0.04);
+  -webkit-transform:scale(1.1); /* Safari et Chrome */
+  -moz-transform:scale(1.1); /* Firefox */
+  -ms-transform:scale(1.1); /* Internet Explorer 9 */
+  -o-transform:scale(1.1); /* Opera */
+  transform:scale(1.1);
+}
+.contact11 img{
+  margin-right: 30px;
+  
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .contact12{
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: start;
+}
+.contactDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  border-left: #000000 solid 0.5px;
+  padding-left: 20px;
+}
+.contactDiv span{
+  margin: 10px;
 }
 .image-logo{
-    width : 250px; height : 250px;
+   
     display: block;
-    margin: auto;
-    
+    margin: 80px 0 0px 0;
+    width: 250px;
+    -webkit-transition: all 1s ease; /* Safari et Chrome */
+    -moz-transition: all 1s ease; /* Firefox */
+    -ms-transition: all 1s ease; /* Internet Explorer 9 */
+    -o-transition: all 1s ease; /* Opera */
+    transition: all 1s ease;
   }
+.image-logo:hover{
+  -webkit-transform:scale(1.1); /* Safari et Chrome */
+  -moz-transform:scale(1.1); /* Firefox */
+  -ms-transform:scale(1.1); /* Internet Explorer 9 */
+  -o-transform:scale(1.1); /* Opera */
+  transform:scale(1.1);
+}
