--- a/css/styleProject.css
+++ b/css/styleProject.css
@@ -262,7 +262,7 @@ a{
     border-radius: 10px;
     width: 340px;
     height: 300px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     /* border: 1px solid #aaaaaa34 ; */
     /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
   -webkit-transition: all 1s ease; /* Safari et Chrome */
@@ -276,7 +276,7 @@ a{
     border-radius: 10px;
     width: 230px;
     height: 300px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
   -webkit-transition: all 1s ease; /* Safari et Chrome */
   -moz-transition: all 1s ease; /* Firefox */
@@ -288,7 +288,7 @@ a{
   border-radius: 10px;
   width: 400px;
   height: 250px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   margin-left: -20px;
   /* La transition s'applique à la fois sur la largeur et la hauteur, avec une durée d'une seconde. */
 -webkit-transition: all 1s ease; /* Safari et Chrome */
@@ -299,13 +299,14 @@ transition: all 1s ease;
 }
 .imgBulle:hover,.imgPays:hover,.imgTemp:hover,.imgGMDP:hover{
     /* L'image est grossie de 25% */
-  -webkit-transform:scale(1); /* Safari et Chrome */
-  -moz-transform:scale(1); /* Firefox */
-  -ms-transform:scale(1); /* Internet Explorer 9 */
-  -o-transform:scale(1); /* Opera */
-  transform:scale(1);
+    
+  -webkit-transform:scale(1.05); /* Safari et Chrome */
+  -moz-transform:scale(1.05); /* Firefox */
+  -ms-transform:scale(1.05); /* Internet Explorer 9 */
+  -o-transform:scale(1.05); /* Opera */
+  transform:scale(1.05);
 }
-.imgBulle:hover,.imgPays:hover{
+/* .imgBulle:hover,.imgPays:hover{
   border-radius: 20px;
   width: 360px;
   height: 330px;
@@ -315,12 +316,11 @@ transition: all 1s ease;
   border-radius: 20px;
   width: 250px;
     height: 330px;
-}
-.imgGMDP:hover{
+} */
+/* .imgGMDP:hover{
   border-radius: 10px;
-  width: 420px;
-  height: 280px;
-}
+  /* margin-left: -10px;   /
+} */
 
 
 
